# Projector

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  changelog.txt
src/: main.cpp
src/Engine/Entity/: DrawableEntity.cpp  DrawableEntity.hpp  Entity.cpp  Entity.hpp
src/Engine/Level/: Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp
src/Engine/Utils/: CONST_DEFINITIONS.hpp  GameSettings.cpp  GameSettings.hpp  ProjectorMessage.cpp  ProjectorMessage.hpp  getClassName.hpp
src/Engine/Utils/Exceptions/: GameLoadException.cpp  GameLoadException.hpp  GameLoadResourcesException.cpp  GameLoadResourcesException.hpp  GameRuntimeException.cpp  GameRuntimeException.hpp  LevelException.cpp  LevelException.hpp
src/Engine/Utils/Ini/: INIReader.cpp  INIReader.hpp  ini.cpp  ini.hpp
src/Engine/Utils/Logger/: LogManager.cpp  LogManager.hpp
src/Game/: Daedalus.cpp  Daedalus.hpp  Game.cpp  Game.hpp  TestLevel.cpp  TestLevel.hpp
